<?xml version="1.0" encoding="utf-8"?>
<!-- Относительное выравнивание, используется весь экран
     и фоновая картинка "background1" -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2">

    <!-- Выравнивание от верхнего края экрана (android:layout_alignParentTop="true")
         по-центру по-горизонтали (android:gravity="center")
         c наклоном текста в 4 градуса (android:rotation="4"),
         желтым цветом (android:textColor="#F2E70E")
         и 36 относительным размером android:textSize="36sp" -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:rotation="0"
        android:text="@string/Компьютеры"
        android:textColor="#3F51B5"
        android:textSize="36sp" />

    <!-- Выравнивание ниже компонента "textView" (android:layout_below="@+id/textView")
         по-центру по-горизонтали (android:gravity="center"), размер 20 букв "M" -->
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:gravity="center"
        android:ems="20"
        android:hint="@string/Введите_группу"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <!-- Выравнивание ниже компонента "editText" (android:layout_below="@+id/editText")
         по-центру по-горизонтали (android:gravity="center")
         большим шрифтом (android:textAppearance="?android:attr/textAppearanceLarge")
         c жирностью и наклоном (android:textStyle="bold|italic") -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:gravity="center"
        android:text="@string/Укажите_технику"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"

        />

    <!-- Выравнивание ниже компонента "textView2" (android:layout_below="@+id/textView2") -->
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_below="@+id/textView2"
        android:text="@string/ПК" />


    <!-- Выравнивание ниже компонента "checkBox" (android:layout_below="@+id/checkBox")
         по-центру по-горизонтали (android:gravity="center")
         средним размером (android:textAppearance="?android:attr/textAppearanceMedium") -->

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="143dp"
        android:text="@string/Ноутбук" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_below="@+id/checkBox"
        android:gravity="center"
        android:text="@string/Выберите_ОС"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Выравнивание ниже компонента "textView3" (android:layout_below="@+id/textView3") -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:checked="true"
            android:text="@string/windows" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/linux" />


    </RadioGroup>

    <!-- Выравнивание ниже компонента "radioGroup" (android:layout_below="@+id/radioGroup")
         по-центру по-горизонтали (android:gravity="center")
         маленьким размером (android:textAppearance="?android:attr/textAppearanceSmall") -->

    <!-- Выравнивание ниже компонента "textView4" (android:layout_below="@+id/textView4") -->


    <!-- Выравнивание по нижней границы окна (android:layout_alignParentBottom="true") -->
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onInfo"
        android:text="@string/ИТОГО"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="239dp"
        android:layout_height="192dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="74dp"
        android:layout_marginBottom="83dp"
        app:srcCompat="@drawable/computer" />


</RelativeLayout>