<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3">


    <TextView
        android:id="@+id/textView"
        android:layout_width="225dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="312dp"
        android:gravity="center"
        android:text="@string/Лаб"
        android:textColor="#B5943F"

        android:textSize="30dp" />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:onClick="onNext"
        android:text="@string/Вперед" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="224dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="62dp"
        android:text="@string/Имя"
        android:textColor="#DC3939"
        android:textSize="20dp" />


</RelativeLayout>